<resources>
    <string name="app_name">androidexampleapp</string>
    <string name="main_page_label">Related Digital Android Native</string>
    <string name="in_app_notification_page_label">In-App Notification</string>
    <string name="push_notification_page_label">Push Notification</string>
    <string name="event_page_label">Event</string>
    <string name="story_page_label">Story</string>
    <string name="event_page">EVENT PAGE</string>
    <string name="story_page">STORY PAGE</string>
    <string name="swipe_carousel_page">SWIPE CAROUSEL PAGE</string>
    <string name="in_app_notification_page">IN-APP NOTIFICATION PAGE</string>
    <string name="push_notification_page">PUSH NOTIFICATION PAGE</string>
    <string name="custom_event_1">CUSTOM EVENT 1</string>
    <string name="custom_event_2">CUSTOM EVENT 2</string>
    <string name="custom_event_3">CUSTOM EVENT 3</string>
    <string name="mini">MINI</string>
    <string name="full">FULL</string>
    <string name="full_image">FULL IMAGE</string>
    <string name="image_button">IMAGE BUTTON</string>
    <string name="image_text_button">IMAGE TEXT BUTTON</string>
    <string name="smile_rating">SMILE RATING</string>
    <string name="nps_with_numbers">NPS WITH NUMBERS</string>
    <string name="nps">NPS</string>
    <string name="alert_native">ALERT NATIVE</string>
    <string name="alert_action_sheet">ALERT ACTION SHEET</string>
    <string name="mail_subs_form">MAIL SUBS FORM</string>
    <string name="scratch_to_win">SCRATCH TO WIN</string>
    <string name="spin_to_win">SPIN TO WIN</string>
    <string name="social_proof">SOCIAL PROOF</string>
    <string name="countdown_timer">COUNTDOWN TIMER</string>
    <string name="in_app_carousel">IN-APP CAROUSEL</string>
    <string name="shake_to_win">SHAKE TO WIN</string>
    <string name="app_tracker">APP TRACKER</string>
    <string name="nps_1">NPS 1</string>
    <string name="nps_2">NPS 2</string>
    <string name="nps_3">NPS 3</string>
    <string name="half_screen">HALF SCREEN</string>
    <string name="notification">NOTIFICATION</string>
    <string name="location_permission">SEND LOCATION PERMISSION</string>
    <string name="recommendation">RECOMMENDATION</string>
    <string name="favourite">FAVOURITE RESPONSE</string>
    <string name="mail_subs_form_half">MAIL SUBS FORM 2</string>
    <string name="geofence">GEOFENCING</string>
    <string name="gift_catch">GIFT CATCH</string>
    <string name="find_to_win">FIND TO WIN</string>
    <string name="banner_carousel">BANNER CAROUSEL PAGE</string>
    <string name="giftbox">GIFTBOX</string>
    <string name="jackpot">JACKPOT</string>
    <string name="claw_machine">CLAW MACHINE</string>
    <string name="nps_with_multiple_popup">NPS WITH MULTIPLE POPUP</string>
    <string name="fullscreen_popup">FULLSCREEN POPUP</string>
    <string name="fullscreen_carousel">FULLSCREEN CAROUSEL</string>
    <string name="drawer">DRAWER</string>
    <string name="custom_actions">CUSTOM ACTIONS</string>
    <string name="inline_nps_with_numbers">INLINE NPS WITH NUMBERS</string>
    <string name="choose_favorite">CHOOSE FAVORITE</string>
    <string name="notification_bell">NOTIFICATION BELL</string>
    <string name="multiple_choice_survey">MULTIPLE CHOICE SURVEY</string>


    <string name="story_id_optional">Story ID (optional)</string>
    <string name="banner_id_optional">Banner ID (optional)</string>
    <string name="show_story">Show Story</string>
    <string name="show_banner">Show Banner</string>
    <string name="clear_story_cache">Clear Story Cache</string>


    <string name="token">TOKEN</string>
    <string name="firebase_token">Firebase Token</string>
    <string name="huawei_token">Huawei Token</string>
    <string name="request_permission">REQUEST PERMISSION</string>
    <string name="get_payload">GET PAYLOADS</string>
    <string name="send_text_push">SEND TEXT PUSH</string>
    <string name="delete_push_with_id">DELETE PUSH WITH ID</string>
    <string name="delete_all_push">DELETE ALL PUSH</string>
    <string name="send_image_push">SEND IMAGE PUSH</string>
    <string name="send_carousel_push">SEND CAROUSEL PUSH</string>
    <string name="sync">SYNC</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="add">ADD</string>
    <string name="register_email_iys">REGISTER EMAIL (İYS)</string>
    <string name="register">REGISTER</string>
    <string name="push_notification_parameters">PUSH NOTIFICATION PARAMETERS</string>
    <string name="last_push_time">Last Push Time</string>
    <string name="key">Key</string>
    <string name="value">Value</string>

</resources>