<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/token"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/firebase_token" />

            <EditText
                android:id="@+id/et_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/huawei_token" />

            <EditText
                android:id="@+id/et_huawei_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:ellipsize="end"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:text="@string/request_permission"
            android:textColor="@android:color/white" />


        <Button

            android:id="@+id/btn_payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:text="@string/get_payload"
            android:textColor="@android:color/white" />

        <Button

            android:id="@+id/btn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:text="@string/send_text_push"
            android:textColor="@android:color/white" />

        <Button

            android:id="@+id/btn_text_delete_all_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:text="@string/delete_all_push"
            android:textColor="@android:color/white" />

        <Button

        android:id="@+id/btn_text_delete_push_with_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_background"
        android:layout_margin="20dp"
        android:text="@string/delete_push_with_id"
        android:textColor="@android:color/white" />

        <Button

            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/send_image_push"
            android:textColor="@android:color/white" />

        <Button

            android:id="@+id/btn_carousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:layout_margin="20dp"
            android:text="@string/send_carousel_push"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sync"
                android:textStyle="bold|italic" />


            <AutoCompleteTextView
                android:id="@+id/autotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColorHint="@color/black"
                android:background="@android:drawable/edit_text"
                android:hint="@string/please_enter_email_address"
                android:inputType="textEmailAddress"
                android:nextFocusLeft="@id/autotext"
                android:nextFocusUp="@id/autotext" />

            <Button
                android:id="@+id/btn_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corners_background"
                android:text="@string/add"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register_email_iys"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/registeremailcommercial_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:drawable/edit_text" />

                <Spinner
                    android:id="@+id/registeremailpermit_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:drawable/edit_text" />

            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/registeremail_autotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColorHint="@color/black"
                android:background="@android:drawable/edit_text"
                android:hint="@string/please_enter_email_address"
                android:inputType="textEmailAddress"
                android:nextFocusLeft="@id/registeremail_autotext"
                android:nextFocusUp="@id/registeremail_autotext" />

            <Button
                android:id="@+id/btn_registeremail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_corners_background"
                android:text="@string/register"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/push_notification_parameters"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/payload_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRelease"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.2"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>